--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Use Node.js 12.19.0
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v3
         with:
-          node-version: 12.19.0
+          node-version: 12.x
           cache: 'npm'
 
       - name: Run Tests
