--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,15 +8,7 @@ jobs:
     name: CI
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout Code
         uses: actions/checkout@v3
-
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 12.x
-          cache: 'npm'
-
-      - name: Run Tests
-        run: npm test
+      - name: Run Jest
+        uses: stefanoeb/jest-action@1.0.3
